--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,4 +54,8 @@ dependencies {
     implementation 'com.airbnb.android:lottie:3.3.1'
     //snackBar
     implementation 'com.trycatch.android:mysnackbar:1.2.2'
+    // dagger2
+    api 'com.google.dagger:dagger:2.28.1'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.28.1'
+
 }
