--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
+        android:name=".di.CovidApplication"
         tools:ignore="GoogleAppIndexingWarning,UnusedAttribute">
 
         <activity android:name=".view.activities.MainActivity">
